@@ -8,7 +8,7 @@ URI::Fast - A fast(er) URI parser
 
 =head1 VERSION
 
-version 0.21
+version 0.22
 
 =head1 SYNOPSIS
 
